# plugins

./: .gitignore  CMakeLists.txt
plugin_App/: CMakeLists.txt
plugin_App/src/: helloPluginInterface.h  interfaces.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
plugin_echo/: CMakeLists.txt
plugin_echo/src/: echoPlugin.cpp  echoPlugin.h
plugin_hello/: CMakeLists.txt
plugin_hello/src/: helloPlugin.cpp  helloPlugin.h  helloPlugin.json
plugin_qwt/: CMakeLists.txt
plugin_qwt/overlays/qwt/: CMakeLists.txt  QwtConfig.cmake.in  portfile.cmake  vcpkg.json
plugin_qwt/src/: QwtPlugin.cpp  QwtPlugin.h
plugin_widget/: CMakeLists.txt
plugin_widget/src/: helloWidget.cpp  helloWidget.h  helloWidget.ui  widgetPlugin.cpp  widgetPlugin.h
